Todo 추가 기능 개발

--- a/src/main/resources/templates/todo/listTodo.html
+++ b/src/main/resources/templates/todo/listTodo.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <div class="container">
-        <div>환영합니다. <span th:text="${name}"></span> 님</div>
+        <div>Welcome : <span th:text="${name}"></span></div>
         <hr>
-        <h2>당신의 TODO List는 ....</h2>
+        <h1>Your Todo List....</h1>
         <table class="table">
             <thead>
                 <tr>
-                    <th>아이디</th>
-                    <th>설명</th>
-                    <th>목표일</th>
-                    <th>완료여부</th>
-                    <th>수정</th>
-                    <th>삭제</th>
+                    <th>id</th>
+                    <th>Description</th>
+                    <th>Target Date</th>
+                    <th>Is Done?</th>
+                    <!--<th>수정</th>
+                    <th>삭제</th>-->
                 </tr>
             </thead>
             <tbody>
@@ -28,11 +28,12 @@
                     <td th:text="${todoDto.description}"></td>
                     <td th:text="${todoDto.targetDate}"></td>
                     <td th:text="${todoDto.isDone()}"></td>
-                    <td><a th:href="@{/todo/update/{id}(id=${todoDto.id})}">수정</a></td>
-                    <td><a th:href="@{/todo/delete/{id}(id=${todoDto.id})}">삭제</a></td>
+                    <!--<td><a th:href="@{/todo/update/{id}(id=${todoDto.id})}">수정</a></td>
+                    <td><a th:href="@{/todo/delete/{id}(id=${todoDto.id})}">삭제</a></td>-->
                 </tr>
             </tbody>
         </table>
+        <a href="/todo/add" class="btn btn-success" >Add Todo</a>
     </div>
     <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
