--- a/src/main/resources/templates/todo/todoAdd.html
+++ b/src/main/resources/templates/todo/todoAdd.html
@@ -4,30 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <title>Todo Add</title>
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
-    <link th:href="@{/webjars/bootstrap-datepicker/css/bootstrap-datepicker.standalone.min.css}" rel="stylesheet" />
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{/webjars/bootstrap-datepicker/css/bootstrap-datepicker.standalone.min.css}" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
-        <h1>Enter Todo Details</h1>
-        <form method="post" role="form" th:object="${todoDto}">
-            <div class="form-group mb-3">
-                <label for="title">Description</label>
-                <input type="text" th:field="*{description}" required="required" class="form-control" id="title" placeholder="설명을 입력하세요."/>
-                <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="text-warning">Incorrect data</p>
-            </div>
-            <div>
-                <input type="hidden" th:field="*{username}" />
-                <input type="hidden" th:field="*{targetDate}" />
-                <input type="hidden" th:field="*{done}" />
-            </div>
-            <div class="mb-3" style="text-align: center">
-                <button type="submit" class="btn btn-primary" style="">Submit</button>
-            </div>
-            <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
-        </form>
-    </div>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-    <!--<script th:src="@{/webjars/jquery/jquery.min.js}"></script>-->
+<div class="container">
+    <h1>Enter Todo Details</h1>
+    <form method="post" role="form" th:object="${todoDto}">
+        <div class="form-group mb-3">
+            <label for="title">Description</label>
+            <input type="text" th:field="*{description}" required="required" class="form-control" id="title"
+                   placeholder="설명을 입력하세요."/>
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="text-warning">Incorrect
+                data</p>
+        </div>
+        <div class="form-group mb-3">
+            <label for="title">TargetDate</label>
+            <input type="text" th:field="*{targetDate}" required="required" class="form-control" id="targetDate"
+                   placeholder="목표 날짜를 입력하세요."/>
+            <p th:if="${#fields.hasErrors('targetDate')}" th:errors="*{targetDate}" class="text-warning">Incorrect
+                data</p>
+        </div>
+        <div>
+            <input type="hidden" th:field="*{username}"/>
+            <input type="hidden" th:field="*{done}"/>
+        </div>
+        <div class="mb-3" style="text-align: center">
+            <button type="submit" class="btn btn-primary" style="">Submit</button>
+        </div>
+        <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
+    </form>
+</div>
+<script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
+<script>
+    $('#targetDate').datepicker({
+        format: "yyyy-mm-dd",
+        language: "ko",
+        autoclose: true,
+    })
+</script>
 </body>
 </html>
