--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Login Page</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
+      layout:decorate="~{layouts/layout1}">
+<div layout:fragment="content">
     <div class="container">
-        <h1>Login Page</h1>
-        <p>Welcome to the login page!</p>
-        <form method="post">
-            Name: <input type="text" name="name">
-            Password: <input type="password" name="password">
-            <input type="submit" value="Submit">
+        <h1><b>Login Page</b></h1>
+        <div class="mt-3"></div>
+        <form role="form" method="post" action="/login">
+            <div class="form-group mt-2">
+                <label th:for="email">이메일주소</label>
+                <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
+            </div>
+            <div class="form-group mt-2">
+                <label th:for="password">비밀번호</label>
+                <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력">
+            </div>
+
+            <div class="mt-3">
+                <p th:if="${errorMsg}" class="error" th:text="${errorMsg}"></p>
+                <button class="btn btn-primary">로그인</button>
+                <button type="button" class="btn btn-primary" onClick="location.href='/member/new'">회원가입</button>
+            </div>
+            <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
         </form>
-        <p th:text="${errorMsg}" style="color: red"></p>
     </div>
-</body>
+</div>
 </html>
