--- a/src/main/resources/templates/temp.html
+++ b/src/main/resources/templates/temp.html
@@ -4,10 +4,7 @@
       layout:decorate="~{layouts/layout1}">
 <div layout:fragment="content">
     <div class="container">
-        <h1>Welcome Page</h1>
-        <div>Your Info : <span th:text="${loginDto.email}"></span></div>
-        <hr>
-        <div><a href="/todo/list" class="btn btn-success">Todo List로 이동</a></div>
+        <h1>Index 페이지</h1>
     </div>
 </div>
 </html>
